--- a/src/assets/styles/sections/_bio.scss
+++ b/src/assets/styles/sections/_bio.scss
@@ -1,6 +1,6 @@
 .bio {
   z-index: 2;
-  background: url('https://nicktruby.github.io/portfolio/src/assets/images/grey-bg.png');
+  background: url('../images/grey-bg.png');
   padding: 70px 0;
   width: 100%;
   display: flex;
